<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.spacexlaunch.android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_action_home_to_DetailInformationFragment"
            app:destination="@id/action_home_to_DetailInformationFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.spacexlaunch.android.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.spacexlaunch.android.ui.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/action_home_to_DetailInformationFragment"
        android:name="com.spacexlaunch.android.ui.detail.DetailedInformationFragment"
        android:label="@string/title_detailed_information"
        tools:layout="@layout/fragment_detailed_information" />
</navigation>